--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "clsx": "^2.0.0",
     "next": "^14.0.2",
     "postcss": "8.4.31",
+    "prisma": "^5.6.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "tailwindcss": "3.3.3",
