--- a/.env.example
+++ b/.env.example
@@ -11,3 +11,7 @@ POSTGRES_DATABASE=
 # `openssl rand -base64 32`
 AUTH_SECRET=
 AUTH_URL=http://localhost:3000/api/auth
+
+
+    Correo electrónico: user@nextmail.com
+    Contraseña: 123456
